@@ -1,4 +1,4 @@
-/**
+/*
  * The MIT License
  * Copyright © 2014-2019 Ilkka Seppälä
  *
@@ -20,19 +20,17 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.abstractdocument;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * AbstractDocument test class
@@ -59,9 +57,7 @@ public class AbstractDocumentTest {
 
   @Test
   public void shouldRetrieveChildren() {
-    Map<String, Object> child1 = new HashMap<>();
-    Map<String, Object> child2 = new HashMap<>();
-    List<Map<String, Object>> children = Arrays.asList(child1, child2);
+    var children = List.of(Map.of(), Map.of());
 
     document.put(KEY, children);
 
@@ -79,8 +75,7 @@ public class AbstractDocumentTest {
 
   @Test
   public void shouldIncludePropsInToString() {
-    Map<String, Object> props = new HashMap<>();
-    props.put(KEY, VALUE);
+    Map<String, Object> props = Map.of(KEY, VALUE);
     DocumentImplementation document = new DocumentImplementation(props);
     assertTrue(document.toString().contains(KEY));
     assertTrue(document.toString().contains(VALUE));
